samples/_failures_safe/1761346862_0dedcf_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f9d3d6b9.c: In function ‘pointcloud_free’:
./samples/SAFE/__tmp_f9d3d6b9.c:122:5: error: expected declaration or statement at end of input
  122 |     pc->count = 0;
      |     ^~
